changed some user stuff
